// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateColorScheme() > applies lightness multiplier to background 1`] = `
{
  "a": "#11160e",
  "b": "#1d231a",
}
`;

exports[`generateColorScheme() > returns the correct values 1`] = `
{
  "contrastColors": [
    {
      "background": "#11160e",
    },
    {
      "name": "neutral",
      "values": [
        {
          "contrast": 1,
          "name": "neutral100",
          "value": "#11180f",
        },
        {
          "contrast": 2,
          "name": "neutral200",
          "value": "#3f4b44",
        },
        {
          "contrast": 3,
          "name": "neutral300",
          "value": "#57655f",
        },
        {
          "contrast": 4,
          "name": "neutral400",
          "value": "#657a71",
        },
        {
          "contrast": 5,
          "name": "neutral500",
          "value": "#728b80",
        },
        {
          "contrast": 6,
          "name": "neutral600",
          "value": "#7d9a8d",
        },
        {
          "contrast": 7,
          "name": "neutral700",
          "value": "#87a799",
        },
        {
          "contrast": 8,
          "name": "neutral800",
          "value": "#90b3a3",
        },
        {
          "contrast": 9,
          "name": "neutral900",
          "value": "#a0bcae",
        },
      ],
    },
    {
      "name": "red",
      "values": [
        {
          "contrast": 1,
          "name": "red100",
          "value": "#2c0b04",
        },
        {
          "contrast": 2,
          "name": "red200",
          "value": "#89210d",
        },
        {
          "contrast": 3,
          "name": "red300",
          "value": "#ad3c1d",
        },
        {
          "contrast": 4,
          "name": "red400",
          "value": "#c4522c",
        },
        {
          "contrast": 5,
          "name": "red500",
          "value": "#cc6a4a",
        },
        {
          "contrast": 6,
          "name": "red600",
          "value": "#d37d61",
        },
        {
          "contrast": 7,
          "name": "red700",
          "value": "#d98d75",
        },
        {
          "contrast": 8,
          "name": "red800",
          "value": "#dd9c86",
        },
        {
          "contrast": 9,
          "name": "red900",
          "value": "#e2a896",
        },
      ],
    },
    {
      "name": "green",
      "values": [
        {
          "contrast": 1,
          "name": "green100",
          "value": "#0e1807",
        },
        {
          "contrast": 2,
          "name": "green200",
          "value": "#334f1c",
        },
        {
          "contrast": 3,
          "name": "green300",
          "value": "#4d6a33",
        },
        {
          "contrast": 4,
          "name": "green400",
          "value": "#647d4d",
        },
        {
          "contrast": 5,
          "name": "green500",
          "value": "#768c62",
        },
        {
          "contrast": 6,
          "name": "green600",
          "value": "#859a74",
        },
        {
          "contrast": 7,
          "name": "green700",
          "value": "#94a684",
        },
        {
          "contrast": 8,
          "name": "green800",
          "value": "#a1b093",
        },
        {
          "contrast": 9,
          "name": "green900",
          "value": "#adbaa1",
        },
      ],
    },
    {
      "name": "yellow",
      "values": [
        {
          "contrast": 1,
          "name": "yellow100",
          "value": "#17150d",
        },
        {
          "contrast": 2,
          "name": "yellow200",
          "value": "#4f482e",
        },
        {
          "contrast": 3,
          "name": "yellow300",
          "value": "#6b623f",
        },
        {
          "contrast": 4,
          "name": "yellow400",
          "value": "#81754b",
        },
        {
          "contrast": 5,
          "name": "yellow500",
          "value": "#928558",
        },
        {
          "contrast": 6,
          "name": "yellow600",
          "value": "#a19362",
        },
        {
          "contrast": 7,
          "name": "yellow700",
          "value": "#ad9f6c",
        },
        {
          "contrast": 8,
          "name": "yellow800",
          "value": "#baab75",
        },
        {
          "contrast": 9,
          "name": "yellow900",
          "value": "#c4b57f",
        },
      ],
    },
    {
      "name": "blue",
      "values": [
        {
          "contrast": 1,
          "name": "blue100",
          "value": "#101616",
        },
        {
          "contrast": 2,
          "name": "blue200",
          "value": "#384e2c",
        },
        {
          "contrast": 3,
          "name": "blue300",
          "value": "#54674b",
        },
        {
          "contrast": 4,
          "name": "blue400",
          "value": "#6a7a61",
        },
        {
          "contrast": 5,
          "name": "blue500",
          "value": "#7b8a74",
        },
        {
          "contrast": 6,
          "name": "blue600",
          "value": "#8a9784",
        },
        {
          "contrast": 7,
          "name": "blue700",
          "value": "#98a392",
        },
        {
          "contrast": 8,
          "name": "blue800",
          "value": "#a4af9f",
        },
        {
          "contrast": 9,
          "name": "blue900",
          "value": "#b0b8ab",
        },
      ],
    },
    {
      "name": "magenta",
      "values": [
        {
          "contrast": 1,
          "name": "magenta100",
          "value": "#19160c",
        },
        {
          "contrast": 2,
          "name": "magenta200",
          "value": "#504827",
        },
        {
          "contrast": 3,
          "name": "magenta300",
          "value": "#70603b",
        },
        {
          "contrast": 4,
          "name": "magenta400",
          "value": "#89714e",
        },
        {
          "contrast": 5,
          "name": "magenta500",
          "value": "#9f805f",
        },
        {
          "contrast": 6,
          "name": "magenta600",
          "value": "#b28c6d",
        },
        {
          "contrast": 7,
          "name": "magenta700",
          "value": "#bd997e",
        },
        {
          "contrast": 8,
          "name": "magenta800",
          "value": "#c4a58d",
        },
        {
          "contrast": 9,
          "name": "magenta900",
          "value": "#ccb09b",
        },
      ],
    },
    {
      "name": "cyan",
      "values": [
        {
          "contrast": 1,
          "name": "cyan100",
          "value": "#12170b",
        },
        {
          "contrast": 2,
          "name": "cyan200",
          "value": "#3b4e25",
        },
        {
          "contrast": 3,
          "name": "cyan300",
          "value": "#506a32",
        },
        {
          "contrast": 4,
          "name": "cyan400",
          "value": "#617e44",
        },
        {
          "contrast": 5,
          "name": "cyan500",
          "value": "#6f8c79",
        },
        {
          "contrast": 6,
          "name": "cyan600",
          "value": "#7b98a5",
        },
        {
          "contrast": 7,
          "name": "cyan700",
          "value": "#8aa4b1",
        },
        {
          "contrast": 8,
          "name": "cyan800",
          "value": "#98afba",
        },
        {
          "contrast": 9,
          "name": "cyan900",
          "value": "#a4b9c3",
        },
      ],
    },
    {
      "name": "orange",
      "values": [
        {
          "contrast": 1,
          "name": "orange100",
          "value": "#1b1509",
        },
        {
          "contrast": 2,
          "name": "orange200",
          "value": "#59451f",
        },
        {
          "contrast": 3,
          "name": "orange300",
          "value": "#795e2b",
        },
        {
          "contrast": 4,
          "name": "orange400",
          "value": "#917033",
        },
        {
          "contrast": 5,
          "name": "orange500",
          "value": "#a5803a",
        },
        {
          "contrast": 6,
          "name": "orange600",
          "value": "#b68d40",
        },
        {
          "contrast": 7,
          "name": "orange700",
          "value": "#c4994a",
        },
        {
          "contrast": 8,
          "name": "orange800",
          "value": "#cba661",
        },
        {
          "contrast": 9,
          "name": "orange900",
          "value": "#d2b175",
        },
      ],
    },
  ],
  "terminal": [
    "#11160e",
    "#89210d",
    "#334f1c",
    "#4f482e",
    "#384e2c",
    "#504827",
    "#3b4e25",
    "#57655f",
    "#3f4b44",
    "#d37d61",
    "#859a74",
    "#a19362",
    "#8a9784",
    "#b28c6d",
    "#7b98a5",
    "#7d9a8d",
  ],
}
`;

exports[`generateColorScheme() > returns the correct values 2`] = `
{
  "contrastColors": [
    {
      "background": "#15150d",
    },
    {
      "name": "neutral",
      "values": [
        {
          "contrast": 1,
          "name": "neutral100",
          "value": "#16160d",
        },
        {
          "contrast": 2,
          "name": "neutral200",
          "value": "#48493c",
        },
        {
          "contrast": 3,
          "name": "neutral300",
          "value": "#616354",
        },
        {
          "contrast": 4,
          "name": "neutral400",
          "value": "#747766",
        },
        {
          "contrast": 5,
          "name": "neutral500",
          "value": "#818877",
        },
        {
          "contrast": 6,
          "name": "neutral600",
          "value": "#8c9785",
        },
        {
          "contrast": 7,
          "name": "neutral700",
          "value": "#96a492",
        },
        {
          "contrast": 8,
          "name": "neutral800",
          "value": "#a0af9e",
        },
        {
          "contrast": 9,
          "name": "neutral900",
          "value": "#abbaaa",
        },
      ],
    },
    {
      "name": "red",
      "values": [
        {
          "contrast": 1,
          "name": "red100",
          "value": "#2d090c",
        },
        {
          "contrast": 2,
          "name": "red200",
          "value": "#8b1d24",
        },
        {
          "contrast": 3,
          "name": "red300",
          "value": "#b5303b",
        },
        {
          "contrast": 4,
          "name": "red400",
          "value": "#ca4955",
        },
        {
          "contrast": 5,
          "name": "red500",
          "value": "#d2626d",
        },
        {
          "contrast": 6,
          "name": "red600",
          "value": "#d87781",
        },
        {
          "contrast": 7,
          "name": "red700",
          "value": "#dd8891",
        },
        {
          "contrast": 8,
          "name": "red800",
          "value": "#e1989f",
        },
        {
          "contrast": 9,
          "name": "red900",
          "value": "#e5a5ab",
        },
      ],
    },
    {
      "name": "green",
      "values": [
        {
          "contrast": 1,
          "name": "green100",
          "value": "#14160c",
        },
        {
          "contrast": 2,
          "name": "green200",
          "value": "#474a39",
        },
        {
          "contrast": 3,
          "name": "green300",
          "value": "#606455",
        },
        {
          "contrast": 4,
          "name": "green400",
          "value": "#74776a",
        },
        {
          "contrast": 5,
          "name": "green500",
          "value": "#84877c",
        },
        {
          "contrast": 6,
          "name": "green600",
          "value": "#92948a",
        },
        {
          "contrast": 7,
          "name": "green700",
          "value": "#9fa198",
        },
        {
          "contrast": 8,
          "name": "green800",
          "value": "#abaca5",
        },
        {
          "contrast": 9,
          "name": "green900",
          "value": "#b5b6b0",
        },
      ],
    },
    {
      "name": "yellow",
      "values": [
        {
          "contrast": 1,
          "name": "yellow100",
          "value": "#151511",
        },
        {
          "contrast": 2,
          "name": "yellow200",
          "value": "#4b483c",
        },
        {
          "contrast": 3,
          "name": "yellow300",
          "value": "#656252",
        },
        {
          "contrast": 4,
          "name": "yellow400",
          "value": "#797662",
        },
        {
          "contrast": 5,
          "name": "yellow500",
          "value": "#8a8670",
        },
        {
          "contrast": 6,
          "name": "yellow600",
          "value": "#979576",
        },
        {
          "contrast": 7,
          "name": "yellow700",
          "value": "#a4a27a",
        },
        {
          "contrast": 8,
          "name": "yellow800",
          "value": "#aeae7f",
        },
        {
          "contrast": 9,
          "name": "yellow900",
          "value": "#b8b890",
        },
      ],
    },
    {
      "name": "blue",
      "values": [
        {
          "contrast": 1,
          "name": "blue100",
          "value": "#131515",
        },
        {
          "contrast": 2,
          "name": "blue200",
          "value": "#554631",
        },
        {
          "contrast": 3,
          "name": "blue300",
          "value": "#735f45",
        },
        {
          "contrast": 4,
          "name": "blue400",
          "value": "#84735c",
        },
        {
          "contrast": 5,
          "name": "blue500",
          "value": "#93846f",
        },
        {
          "contrast": 6,
          "name": "blue600",
          "value": "#9f927f",
        },
        {
          "contrast": 7,
          "name": "blue700",
          "value": "#aa9f8f",
        },
        {
          "contrast": 8,
          "name": "blue800",
          "value": "#b4aa9c",
        },
        {
          "contrast": 9,
          "name": "blue900",
          "value": "#beb4a8",
        },
      ],
    },
    {
      "name": "magenta",
      "values": [
        {
          "contrast": 1,
          "name": "magenta100",
          "value": "#1b150c",
        },
        {
          "contrast": 2,
          "name": "magenta200",
          "value": "#5d4231",
        },
        {
          "contrast": 3,
          "name": "magenta300",
          "value": "#83574e",
        },
        {
          "contrast": 4,
          "name": "magenta400",
          "value": "#a06663",
        },
        {
          "contrast": 5,
          "name": "magenta500",
          "value": "#b77375",
        },
        {
          "contrast": 6,
          "name": "magenta600",
          "value": "#c58185",
        },
        {
          "contrast": 7,
          "name": "magenta700",
          "value": "#cc9094",
        },
        {
          "contrast": 8,
          "name": "magenta800",
          "value": "#d39ea1",
        },
        {
          "contrast": 9,
          "name": "magenta900",
          "value": "#d8aaad",
        },
      ],
    },
    {
      "name": "cyan",
      "values": [
        {
          "contrast": 1,
          "name": "cyan100",
          "value": "#101614",
        },
        {
          "contrast": 2,
          "name": "cyan200",
          "value": "#3b4b46",
        },
        {
          "contrast": 3,
          "name": "cyan300",
          "value": "#556562",
        },
        {
          "contrast": 4,
          "name": "cyan400",
          "value": "#687976",
        },
        {
          "contrast": 5,
          "name": "cyan500",
          "value": "#798987",
        },
        {
          "contrast": 6,
          "name": "cyan600",
          "value": "#869795",
        },
        {
          "contrast": 7,
          "name": "cyan700",
          "value": "#93a3a3",
        },
        {
          "contrast": 8,
          "name": "cyan800",
          "value": "#a0aeae",
        },
        {
          "contrast": 9,
          "name": "cyan900",
          "value": "#acb8b8",
        },
      ],
    },
    {
      "name": "orange",
      "values": [
        {
          "contrast": 1,
          "name": "orange100",
          "value": "#20130c",
        },
        {
          "contrast": 2,
          "name": "orange200",
          "value": "#673e26",
        },
        {
          "contrast": 3,
          "name": "orange300",
          "value": "#8c5434",
        },
        {
          "contrast": 4,
          "name": "orange400",
          "value": "#a8653e",
        },
        {
          "contrast": 5,
          "name": "orange500",
          "value": "#bd7349",
        },
        {
          "contrast": 6,
          "name": "orange600",
          "value": "#c5845f",
        },
        {
          "contrast": 7,
          "name": "orange700",
          "value": "#cc9473",
        },
        {
          "contrast": 8,
          "name": "orange800",
          "value": "#d2a184",
        },
        {
          "contrast": 9,
          "name": "orange900",
          "value": "#d8ac93",
        },
      ],
    },
  ],
  "terminal": [
    "#15150d",
    "#8b1d24",
    "#474a39",
    "#4b483c",
    "#554631",
    "#5d4231",
    "#3b4b46",
    "#616354",
    "#48493c",
    "#d87781",
    "#92948a",
    "#979576",
    "#9f927f",
    "#c58185",
    "#869795",
    "#8c9785",
  ],
}
`;
